--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   <title>RANEE SAREES</title>
 </head>
 
-<body class="body-bg">
-  <nav id="navbar" class="navbar navbar-expand-lg navbar-light sticky-top bg-white">
+<body>
+  <nav id="navbar" class="navbar navbar-expand-lg navbar-light fixed-top ">
     <div class="container-fluid">
       <a class="navbar-brand" href="#"><img class="img-fluid" src="./assets/images/RANEE.png" alt="My Brand"
           width="100px" height="50px"></a>
@@ -131,7 +131,7 @@
 
     <!-- our products Ends -->
     <div class="container text-center py-4 py-md-6">
-      <div class="lc-block card border-0 text-center rounded p-4 p-lg-6 bootstrap_gradient">
+      <div class="lc-block card border-0 text-center rounded p-4 p-lg-6 bootstrap_gradient shadow-lg">
         <div class="row card-body mb-3 mb-lg-4">
           <div class="col-xl-11 col-xxl-9 mx-auto">
             <div class="lc-block mb-4">
@@ -141,14 +141,14 @@
             </div>
             <div class="lc-block">
               <h3 editable="inline" class="fw-bold display-6">We are <span class="lc-block position-relative">trusted
-                  <img class="position-absolute top-100 start-0 mt-n1 img-fluid"  alt="no-img"
+                  <img class="position-absolute top-75 start-0 mt-n1 img-fluid"  alt="no-img"
                     src="https://cdn.livecanvas.com/media/underline/underline1.svg"></span> by over 5000+ clients. Join
                 them now and grow your business.</h3>
             </div>
           </div>
         </div>
-        <div class="lc-block"><a class="btn btn-primary btn-lg"
-            href="whatsapp://send?text=Hello World!&phone=+916379473471" role="button">Text us</a></div>
+        <div class="lc-block"><a class="btn btn-primary btn-lg text-us"
+            href="whatsapp://send?text=Hello World!&phone=+916379473471" role="button">Text Us</a></div>
       </div>
     </div>
     <!-- footer starts  -->
