--- a/index.html
+++ b/index.html
@@ -121,10 +121,40 @@
     <!-- about us Ends -->
 
     <!-- our products starts-->
-    <div>
+    <div class="container">
       <h4 class="heading">Our Products</h4>
 
-      <h6 class="text-center"> coming soon</h6>
+      <div class="row">
+        <div class="col-12 col-md-4">
+          <div class="card" style="width: 18rem;">
+            <img src="./assets/images/gal8.jpeg" class="card-img-top" height="400px" alt="...">
+            <div class="card-body">
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-4">
+          <div class="card" style="width: 18rem;">
+            <img src="./assets/images/gal7.jpeg" class="card-img-top" height="400px" alt="...">
+            <div class="card-body">
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-4">
+          <div class="card" style="width: 18rem;">
+            <img src="./assets/images/gal2.jpeg" class="card-img-top" height="400px" alt="...">
+            <div class="card-body">
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12 text-center">
+          <a class="btn all-products-btn" href="./products.html">View All Products</a>
+        </div>
+      </div>
     </div>
     
 
