--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 </head>
 
 <body>
+  <button type="button" class="btn btn-danger btn-floating btn-lg" id="btn-back-to-top">
+    <i class="fas fa-arrow-up"></i>
+  </button>
   <nav id="navbar" class="navbar navbar-expand-lg navbar-light fixed-top ">
     <div class="container-fluid">
       <a class="navbar-brand" href="#"><img class="img-fluid" src="./assets/images/RANEE.png" alt="My Brand"
@@ -129,7 +132,8 @@
           <div class="card" style="width: 18rem;">
             <img src="./assets/images/gal8.jpeg" class="card-img-top" height="400px" alt="...">
             <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                content.</p>
             </div>
           </div>
         </div>
@@ -137,7 +141,8 @@
           <div class="card" style="width: 18rem;">
             <img src="./assets/images/gal7.jpeg" class="card-img-top" height="400px" alt="...">
             <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                content.</p>
             </div>
           </div>
         </div>
@@ -145,7 +150,8 @@
           <div class="card" style="width: 18rem;">
             <img src="./assets/images/gal2.jpeg" class="card-img-top" height="400px" alt="...">
             <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                content.</p>
             </div>
           </div>
         </div>
@@ -156,7 +162,7 @@
         </div>
       </div>
     </div>
-    
+
 
 
     <!-- our products Ends -->
@@ -171,7 +177,7 @@
             </div>
             <div class="lc-block">
               <h3 editable="inline" class="fw-bold display-6">We are <span class="lc-block position-relative">trusted
-                  <img class="position-absolute top-75 start-0 mt-n1 img-fluid"  alt="no-img"
+                  <img class="position-absolute top-75 start-0 mt-n1 img-fluid" alt="no-img"
                     src="https://cdn.livecanvas.com/media/underline/underline1.svg"></span> by over 5000+ clients. Join
                 them now and grow your business.</h3>
             </div>
@@ -187,8 +193,7 @@
         <div class="row">
           <div class="col-md-12 text-center">
             <div class="lc-block mb-2">
-              <img alt="logo" class="img-fluid" src="./assets/images/2.png"
-                style="height:20vh">
+              <img alt="logo" class="img-fluid" src="./assets/images/2.png" style="height:20vh">
             </div>
             <div class="lc-block text-dark mb-2">
               <div editable="rich">
