--- a/about.html
+++ b/about.html
@@ -14,10 +14,14 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <title>RANEE SAREES</title>
 </head>
 
 <body class="body-bg">
+    <button type="button" class="btn btn-lg" id="btn-back-to-top">
+        <i class="bi bi-arrow-up-short"></i>
+    </button>
     <nav id="navbar" class="navbar navbar-expand-lg navbar-light sticky-top">
         <div class="container-fluid">
             <a class="navbar-brand" href="#"><img class="img-fluid" src="./assets/images/RANEE.png" alt="My Brand"
@@ -111,8 +115,7 @@
                     </div>
                     <div class="col-lg-5 align-self-center">
                         <div class="lc-block about-img-shape position-relative"> <img class="img-fluid"
-                                src="./assets/images/ranee_2.jpeg"
-                                alt="Photo by Dane Deaner">
+                                src="./assets/images/ranee_2.jpeg" alt="Photo by Dane Deaner">
                         </div>
                     </div>
                 </div>
@@ -149,8 +152,7 @@
                     </div>
                     <div class="col-lg-5 align-self-center">
                         <div class="lc-block about-img-shape position-relative"> <img class="img-fluid"
-                                src="./assets/images/ranee_4.jpeg"
-                                alt="Photo by Dane Deaner">
+                                src="./assets/images/ranee_4.jpeg" alt="Photo by Dane Deaner">
                         </div>
                     </div>
                 </div>
