--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
       <div class="row container">
         <div class="col-12 col-md-4 col-lg-4 py-3">
-          <div class="card card-hover shadow-lg" style="width: 18rem;">
+          <div class="card card-hover shadow-lg">
             <img src="./assets/images/gal8.jpeg" class="card-img-top" height="350px" alt="...">
             <svg class="card-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffffff" fill-opacity="1" d="M0,256L48,256C96,256,192,256,288,245.3C384,235,480,213,576,181.3C672,149,768,107,864,112C960,117,1056,171,1152,186.7C1248,203,1344,181,1392,170.7L1440,160L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
             <div class="card-body text-center">
@@ -139,7 +139,7 @@
           </div>
         </div>
         <div class="col-12 col-md-4 col-lg-4 py-3">
-          <div class="card card-hover shadow-lg" style="width: 18rem;">
+          <div class="card card-hover shadow-lg">
             <img src="./assets/images/gal7.jpeg" class="card-img-top" height="350px" alt="...">
             <svg class="card-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffffff" fill-opacity="1" d="M0,192L48,197.3C96,203,192,213,288,192C384,171,480,117,576,90.7C672,64,768,64,864,85.3C960,107,1056,149,1152,186.7C1248,224,1344,256,1392,272L1440,288L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
             <div class="card-body text-center">
@@ -150,7 +150,7 @@
           </div>
         </div>
         <div class="col-12 col-md-4 col-lg-4 py-3">
-          <div class="card card-hover shadow-lg" style="width: 18rem;">
+          <div class="card card-hover shadow-lg" >
             <img src="./assets/images/gal9.jpeg" class="card-img-top" height="350px" alt="...">
             <svg class="card-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fff" fill-opacity="1" d="M0,64L48,53.3C96,43,192,21,288,58.7C384,96,480,192,576,218.7C672,245,768,203,864,154.7C960,107,1056,53,1152,32C1248,11,1344,21,1392,26.7L1440,32L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
             <div class="card-body text-center">
@@ -206,7 +206,7 @@
             <div class="lc-block text-dark mb-2">
               <div editable="rich">
                 <h4>
-                  <em>My Company Slogan</em>
+                  <em>Comport is our Promise</em>
                 </h4>
               </div>
             </div>
