--- a/about.html
+++ b/about.html
@@ -15,6 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <script src="./header.js" ></script>
     <title>RANEE SAREES</title>
 </head>
 
@@ -73,9 +74,10 @@
                     <div class="lc-block">
                         <span editable="inline" class="small mt-4 d-block">LOREM IPSUM</span>
                         <h2 editable="inline" class="display-2 mb-0"><b>About us</b></h2>
-                        <p editable="inline"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc et metus id
-                            <br>ligula malesuada placerat sit amet quis enim.
+                        <p editable="inline"> We are committed to working with our
+                            <br> partners and customers to develop products that make a difference in the world.
                         </p>
+                        <hr class="w-50 mx-auto mb-5 mb-xl-9 border-dark-subtle">
                     </div><!-- /lc-block -->
                 </div>
             </div>
@@ -171,7 +173,7 @@
                         <div class="lc-block text-dark mb-2">
                             <div editable="rich">
                                 <h4>
-                                    <em>My Company Slogan</em>
+                                    <em>Comport is our Promise</em>
                                 </h4>
                             </div>
                         </div>
