--- a/gallery.html
+++ b/gallery.html
@@ -73,6 +73,7 @@
                         <p editable="inline"> We are committed to working with our
                             <br> partners and customers to develop products that make a difference in the world.
                         </p>
+                        <hr class="w-50 mx-auto mb-5 mb-xl-9 border-dark-subtle">
                     </div><!-- /lc-block -->
                 </div><!-- /col -->
             </div>
@@ -226,7 +227,7 @@
                         <div class="lc-block text-dark mb-2">
                             <div editable="rich">
                                 <h4>
-                                    <em>My Company Slogan</em>
+                                    <em>Comport is our Promise</em>
                                 </h4>
                             </div>
                         </div>
