--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
           </div>
         </div>
         <div class="lc-block">
-          <a class="btn btn-dark" href="./about.html" role="button">See more</a>
+          <a class="btn btn-dark btn-hover" href="./about.html" role="button">See more</a>
         </div>
       </div>
     </div>
@@ -164,7 +164,7 @@
         
         <div class="row container">
           <div class="col-12 text-center">
-            <a class="btn all-products-btn" href="./products.html">View All Products</a>
+            <a class="btn all-products-btn btn-hover" href="./products.html">View All Products</a>
           </div>
         </div>
       </div>
@@ -191,7 +191,7 @@
             </div>
           </div>
         </div>
-        <div class="lc-block"><a class="btn btn-primary btn-lg text-us"
+        <div class="lc-block"><a class="btn-hover btn btn-primary btn-lg text-us"
             href="whatsapp://send?text=Hello World!&phone=+916379473471" role="button">Text Us</a></div>
       </div>
     </div>
