--- a/products.html
+++ b/products.html
@@ -22,7 +22,7 @@
     <button type="button" class="btn btn-lg" id="btn-back-to-top">
         <i class="bi bi-arrow-up-short"></i>
     </button>
-    <nav id="navbar" class="navbar navbar-expand-lg navbar-light fixed-top">
+    <nav id="navbar" class="navbar navbar-expand-lg navbar-light sticky-top">
         <div class="container-fluid">
             <a class="navbar-brand" href="#"><img class="img-fluid" src="./assets/images/RANEE.png" alt="My Brand"
                     width="100px" height="50px"></a>
@@ -31,27 +31,33 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="./index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="./gallery.html">Gallery</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="./products.html">Products</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="./about.html">About us</a>
-                    </li>
+                <div lc-helper="shortcode" class="live-shortcode me-auto">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="./index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="./gallery.html">Gallery</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="./products.html">Products</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="./about.html">About us</a>
+                        </li>
 
-                </ul>
-                <!-- <form class="d-flex">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
-          </form> -->
+                    </ul>
+                </div>
+                <div class="lc-block">
+                    <a class="navbar-text" href="whatsapp://send?text=Hello World!&phone=+916379473471">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="1em" height="1em"
+                            lc-helper="svg-icon" fill="currentColor">
+                            <path
+                                d="M380.9 97.1C339 55.1 283.2 32 223.9 32c-122.4 0-222 99.6-222 222 0 39.1 10.2 77.3 29.6 111L0 480l117.7-30.9c32.4 17.7 68.9 27 106.1 27h.1c122.3 0 224.1-99.6 224.1-222 0-59.3-25.2-115-67.1-157zm-157 341.6c-33.2 0-65.7-8.9-94-25.7l-6.7-4-69.8 18.3L72 359.2l-4.4-7c-18.5-29.4-28.2-63.3-28.2-98.2 0-101.7 82.8-184.5 184.6-184.5 49.3 0 95.6 19.2 130.4 54.1 34.8 34.9 56.2 81.2 56.1 130.5 0 101.8-84.9 184.6-186.6 184.6zm101.2-138.2c-5.5-2.8-32.8-16.2-37.9-18-5.1-1.9-8.8-2.8-12.5 2.8-3.7 5.6-14.3 18-17.6 21.8-3.2 3.7-6.5 4.2-12 1.4-32.6-16.3-54-29.1-75.5-66-5.7-9.8 5.7-9.1 16.3-30.3 1.8-3.7.9-6.9-.5-9.7-1.4-2.8-12.5-30.1-17.1-41.2-4.5-10.8-9.1-9.3-12.5-9.5-3.2-.2-6.9-.2-10.6-.2-3.7 0-9.7 1.4-14.8 6.9-5.1 5.6-19.4 19-19.4 46.3 0 27.3 19.9 53.7 22.6 57.4 2.8 3.7 39.1 59.7 94.8 83.8 35.2 15.2 49 16.5 66.6 13.9 10.7-1.6 32.8-13.4 37.4-26.4 4.6-13 4.6-24.1 3.2-26.4-1.3-2.5-5-3.9-10.5-6.6z">
+                            </path>
+                        </svg> Text us now!</a>
+                </div>
             </div>
-        </div>
     </nav>
     <div class="main">
         <div class="container-fluid position-relative overflow-hidden my-5">
@@ -74,8 +80,8 @@
             <div class="gallery-wrap">
 
                 <ul id="filters" class="clearfix">
-                    <li><span class="filter active" data-filter=".print, .strategy, .logo, .web">All</span></li>
-                    <li><span class="filter" data-filter=".print">6 yards</span></li>
+                    <li><span class="filter active" data-filter=".6yards, .strategy, .logo, .web">All</span></li>
+                    <li><span class="filter" data-filter=".6yards">6 yards</span></li>
                     <li><span class="filter" data-filter=".strategy">9 yards</span></li>
                     <li><span class="filter" data-filter=".logo">10 yards</span></li>
                     <li><span class="filter" data-filter=".web">12 yards</span></li>
@@ -83,18 +89,26 @@
 
                 <div id="gallery">
 
-                    <a class="gallery-item logo" href="#" data-cat="logo">
-                        <div class="inside">
-                            <div class="details">
-                                <div class="text">
-                                    <h2>Client Name</h2>
-                                    <p>Logo</p>
+                    <div data-cat="logo">
+                        <div class="gallery-item logo">
+                            <div class="inside">
+                                <div class="details">
+                                    <div class="text">
+                                        <h2>Red lava</h2>
+                                        <p>Logo</p>
+                                    </div>
                                 </div>
+                                <div class="overlay"></div>
+                                <img src="./assets/images/gal7.jpeg" height="300px" width="100%" alt="" />
+
                             </div>
-                            <div class="overlay"></div>
-                            <img src="./assets/images/gal7.jpeg" alt="" />
+                            <div class="enquire">
+                                <h4>Red Lava</h4>
+                                <p>Description about the Red Lava</p>
+                                <a onclick="enquireNow()" href="whatsapp://send?text=Need to know about this product RED LAVA https://raneesarees.netlify.app/assets/images/gal7.jpeg&phone=+916379473471" class="btn enquire-btn">Enquire Now<i class="px-3 bi bi-whatsapp"></i></a>
+                            </div>
                         </div>
-                    </a>
+                    </div>
 
                     <a class="gallery-item logo" href="#" data-cat="logo">
                         <div class="inside">
@@ -122,7 +136,7 @@
                         </div>
                     </a>
 
-                    <a class="gallery-item print" href="#" data-cat="print">
+                    <a class="gallery-item 6yards" href="#" data-cat="6yards">
                         <div class="inside">
                             <div class="details">
                                 <div class="text">
@@ -217,7 +231,7 @@
                         <div class="lc-block text-dark mb-2">
                             <div editable="rich">
                                 <h4>
-                                    <em>My Company Slogan</em>
+                                    <em>Comport is our Promise</em>
                                 </h4>
                             </div>
                         </div>
