--- a/index.html
+++ b/index.html
@@ -103,13 +103,12 @@
       <div class="p-5 mb-4 lc-block col-xxl-7 col-lg-8 col-12 about-bg shadow-lg">
         <div class="lc-block">
           <div editable="rich">
-            <h2 class="fw-bolder display-3">How we start</h2>
+            <h2 class="fw-bolder display-3">About Ranee Sarees</h2>
           </div>
         </div>
         <div class="lc-block col-md-8">
           <div editable="rich">
-            <p class="lead">Using a series of utilities, you can create this jumbotron, just like the one in previous
-              versions of Bootstrap. Check out the examples below for how you can remix and restyle it to your liking.
+            <p class="lead">This shop is our authorized seller of "Ranee Sarees." We encourage you to make a purchase and support us.
             </p>
           </div>
         </div>
