--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <script src="./header.js" ></script>
+    <script src="./header.js"></script>
     <title>RANEE SAREES</title>
 </head>
 
@@ -74,8 +74,10 @@
                     <div class="lc-block">
                         <span editable="inline" class="small mt-4 d-block">LOREM IPSUM</span>
                         <h2 editable="inline" class="display-2 mb-0"><b>About us</b></h2>
-                        <p editable="inline"> We are committed to working with our
-                            <br> partners and customers to develop products that make a difference in the world.
+                        <p editable="inline" class="text-capitalize"> We are Sungudi Manufacturing company over 4 Generations,We produce sarees
+                            with colour guaranteed and send them world wide.
+                            <br>We are located in the heart of Madurai City at South Masi Street Opposite to Kamatchi
+                            Ekambareswarar Temple
                         </p>
                         <hr class="w-50 mx-auto mb-5 mb-xl-9 border-dark-subtle">
                     </div><!-- /lc-block -->
@@ -95,9 +97,15 @@
                     <div class="col-lg-6 offset-lg-1 my-2 align-self-center">
                         <div class="lc-block">
                             <div editable="rich">
-                                <h2>1st Generation<br></h2>
-                                <p>Cras lacinia rutrum justo, vel porta velit porta nec. Ut convallis quam nec purus
-                                    vestibulum tristique. Phasellus sed elit eu ante pretium tempor a ac sem.</p>
+                                <h2 class="text-capitalize">1st Generation<br></h2>
+                                <h4 class="text-capitalize">Rani.V.Sundhar Rao</h4>
+                                <p class="text-capitalize">He is the Founder of our Brand Ranee Sarees, He Stared to Make sarees in Madurai and
+                                    sell them around Tamil Nadu mainly the Voyal Sarees were produced and Sold in town
+                                    of Kayalpatinam, from his period there were only few available colours and designs
+                                    he made them with almost care and designed a process to making colours which don’t
+                                    change.He had Almost around 100 Handlooms run in Madurai and Paramakudi.He started
+                                    the Business in Mahal 4Th street at the year 1946.At his time only white dots were
+                                    available he started making Colour Dots with red and Black Combination</p>
                             </div>
                         </div>
                         <!-- /lc-block -->
@@ -107,10 +115,17 @@
                     <div class="col-lg-6 offset-lg-1 my-2 align-self-center">
                         <div class="lc-block">
                             <div editable="rich">
-                                <h2>2nd Generation</h2>
-                                <p>Sed eu felis tellus. Nulla pellentesque dolor at laoreet rhoncus. Nullam vel dolor
-                                    vestibulum, cursus eros eu, elementum est. Nunc in eros arcu. Duis condimentum non
-                                    libero sit amet tempus. Nulla venenatis nibh et ultricies egestas.</p>
+                                <h2 class="text-capitalize">2nd Generation</h2>
+                                <h4 class="text-capitalize">Rani.S.Santharam</h4>
+                                <p class="text-capitalize">He made New designs and colours for the new generation Customers.He Started a New
+                                    Version of Ranee Sarees named after his Father “Sundhar Sarees” He Produced Quality
+                                    Dhoties using handloom in Salem and Madurai.He adopted New designs inspired from
+                                    temples and nature in screen printing and got a good reach from customers. Handblock
+                                    prints were introduced during his time.Handloom Sarees in Sungudi were made like
+                                    Silk Sarees and Had a huge Craze for Pleating those sarees. He started a Shop in
+                                    South Masi Street Which was opened by Rani.V.Sundhar Rao in 1989 as the customers
+                                    requested to open in a big space this shop was opened.
+                                </p>
                             </div>
                         </div>
                         <!-- /lc-block -->
@@ -125,16 +140,19 @@
                 <div class="row m-4">
                     <div class="col-lg-5 align-self-center">
                         <div class="lc-block about-img-shape position-relative"> <img class="img-fluid"
-                                src="https://images.unsplash.com/photo-1498842812179-c81beecf902c?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=634&amp;q=80"
+                                src="./assets/images/s_dad.jpg"
                                 alt="Photo by Dane Deaner">
                         </div>
                     </div>
                     <div class="col-lg-6 offset-lg-1 my-2 align-self-center">
                         <div class="lc-block">
                             <div editable="rich">
-                                <h2>3rd Generation<br></h2>
-                                <p>Cras lacinia rutrum justo, vel porta velit porta nec. Ut convallis quam nec purus
-                                    vestibulum tristique. Phasellus sed elit eu ante pretium tempor a ac sem.</p>
+                                <h2 class="text-capitalize">3rd Generation<br></h2>
+                                <h4 class="text-capitalize">Rani.S.Suresh</h4>
+                                <p class="text-capitalize">He is well managing in South street shop currently ,He has introduced Kurthi’s in
+                                    sungudi. He has placed many stalls in Calcutta,mumbai,kumbakonam .He is teaching tie
+                                    and dye knots design in sungudi sarees.
+                                </p>
                             </div>
                         </div>
                         <!-- /lc-block -->
@@ -144,17 +162,17 @@
                     <div class="col-lg-6 offset-lg-1 my-2 align-self-center">
                         <div class="lc-block">
                             <div editable="rich">
-                                <h2>4th Generation</h2>
-                                <p>Sed eu felis tellus. Nulla pellentesque dolor at laoreet rhoncus. Nullam vel dolor
-                                    vestibulum, cursus eros eu, elementum est. Nunc in eros arcu. Duis condimentum non
-                                    libero sit amet tempus. Nulla venenatis nibh et ultricies egestas.</p>
+                                <h2 class="text-capitalize">4th Generation</h2>
+                                <h4 class="text-capitalize">Rani.S.Sundar rao</h4>
+                                <p class="text-capitalize">I came into the business after completing my engineering degree. I am supplying to the retail shops in and around Tamil Nadu.
+                                </p>
                             </div>
                         </div>
                         <!-- /lc-block -->
                     </div>
                     <div class="col-lg-5 align-self-center">
                         <div class="lc-block about-img-shape position-relative"> <img class="img-fluid"
-                                src="./assets/images/ranee_4.jpeg" alt="Photo by Dane Deaner">
+                                src="./assets/images/sundar.png" alt="Photo by Dane Deaner">
                         </div>
                     </div>
                 </div>
