--- a/products.html
+++ b/products.html
@@ -77,6 +77,67 @@
 
         <!-- main starts -->
         <section class="container xl-8">
+            <ul class="nav nav-tabs" role="tablist">
+                <li class="nav-item" role="presentation">
+                    <a class="nav-link active" id="simple-tab-0" data-bs-toggle="tab" href="#simple-tabpanel-0"
+                        role="tab" aria-controls="simple-tabpanel-0" aria-selected="true">6 Yards</a>
+                </li>
+                <li class="nav-item" role="presentation">
+                    <a class="nav-link" id="simple-tab-1" data-bs-toggle="tab" href="#simple-tabpanel-1" role="tab"
+                        aria-controls="simple-tabpanel-1" aria-selected="false">10.5 Yards</a>
+                </li>
+            </ul>
+            <div class="tab-content pt-5" id="tab-content">
+                <div class="tab-pane active" id="simple-tabpanel-0" role="tabpanel" aria-labelledby="simple-tab-0">
+                    <h5>6 Yards</h5>
+                    <ul class="nav nav-tabs" role="tablist">
+                        <li class="nav-item" role="presentation">
+                            <a class="nav-link active" id="6yards-0" data-bs-toggle="tab" href="#simple-6yards-0"
+                                role="tab" aria-controls="simple-6yards-0" aria-selected="true">One side</a>
+                        </li>
+                        <li class="nav-item" role="presentation">
+                            <a class="nav-link " id="6yards-1" data-bs-toggle="tab" href="#simple-6yards-1"
+                                role="tab" aria-controls="simple-6yards-1" aria-selected="true">40 * 2</a>
+                        </li>
+                        <li class="nav-item" role="presentation">
+                            <a class="nav-link " id="6yards-2" data-bs-toggle="tab" href="#simple-6yards-2"
+                                role="tab" aria-controls="simple-6yards-2" aria-selected="true">Double side</a>
+                        </li>
+                        <li class="nav-item" role="presentation">
+                            <a class="nav-link " id="6yards-3" data-bs-toggle="tab" href="#simple-6yards-3"
+                                role="tab" aria-controls="simple-6yards-3" aria-selected="true">Poonam</a>
+                        </li>
+                        <li class="nav-item" role="presentation">
+                            <a class="nav-link " id="6yards-4" data-bs-toggle="tab" href="#simple-6yards-4"
+                                role="tab" aria-controls="simple-6yards-4" aria-selected="true">Sudesi</a>
+                        </li>
+                    </ul>
+                    <div class="tab-content pt-5" id="tab-content">
+                        <div class="tab-pane active" id="simple-6yards-0" role="tabpanel"
+                            aria-labelledby="6yards-0">
+                            one side
+                        </div>
+                        <div class="tab-pane " id="simple-6yards-1" role="tabpanel"
+                            aria-labelledby="6yards-1">
+                            40 * 2
+                        </div>
+                        <div class="tab-pane " id="simple-6yards-2" role="tabpanel"
+                            aria-labelledby="6yards-2">
+                            double side
+                        </div>
+                        <div class="tab-pane " id="simple-6yards-3" role="tabpanel"
+                            aria-labelledby="6yards-3">
+                            poonam
+                        </div>
+                        <div class="tab-pane " id="simple-6yards-4" role="tabpanel"
+                            aria-labelledby="6yards-4">
+                            Sudesi
+                        </div>
+                    </div>
+                </div>
+                <div class="tab-pane" id="simple-tabpanel-1" role="tabpanel" aria-labelledby="simple-tab-1">Tab 2
+                    selected</div>
+            </div>
             <div class="gallery-wrap">
 
                 <ul id="filters" class="clearfix">
@@ -89,7 +150,7 @@
 
                 <div id="gallery">
 
-                    <div data-cat="logo">
+                    <div class="shadow-lg" data-cat="logo">
                         <div class="gallery-item logo">
                             <div class="inside">
                                 <div class="details">
@@ -102,10 +163,12 @@
                                 <img src="./assets/images/gal7.jpeg" height="300px" width="100%" alt="" />
 
                             </div>
-                            <div class="enquire">
+                            <div class="enquire shadow-lg">
                                 <h4>Red Lava</h4>
                                 <p>Description about the Red Lava</p>
-                                <a onclick="enquireNow()" href="whatsapp://send?text=Need to know about this product RED LAVA https://raneesarees.netlify.app/assets/images/gal7.jpeg&phone=+916379473471" class="btn enquire-btn">Enquire Now<i class="px-3 bi bi-whatsapp"></i></a>
+                                <a onclick="enquireNow()"
+                                    href="whatsapp://send?text=Need to know about this product RED LAVA https://raneesarees.netlify.app/assets/images/gal7.jpeg&phone=+916379473471"
+                                    class="btn enquire-btn">Enquire Now<i class="px-3 bi bi-whatsapp"></i></a>
                             </div>
                         </div>
                     </div>
