--- a/products.html
+++ b/products.html
@@ -182,7 +182,7 @@
                                 </div>
                             </div>
                             <div class="overlay"></div>
-                            <img src="https://unsplash.it/500/500?image=1083" alt="" />
+                            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcROOTJ-mbTPHyoBoxv0wJN8xIGa1vU56pmbpA&s" height="300px" width="100%" alt="" />
                         </div>
                     </a>
 
