--- a/about.html
+++ b/about.html
@@ -74,7 +74,7 @@
                     <div class="lc-block">
                         <span editable="inline" class="small mt-4 d-block">LOREM IPSUM</span>
                         <h2 editable="inline" class="display-2 mb-0"><b>About us</b></h2>
-                        <p editable="inline" class="text-capitalize"> We are Sungudi Manufacturing company over 4 Generations,We produce sarees
+                        <p editable="inline" class="text-capitalize"> We are Sungudi Manufacturing company over four Generations,We produce sarees
                             with colour guaranteed and send them world wide.
                             <br>We are located in the heart of Madurai City at South Masi Street Opposite to Kamatchi
                             Ekambareswarar Temple
@@ -140,7 +140,7 @@
                 <div class="row m-4">
                     <div class="col-lg-5 align-self-center">
                         <div class="lc-block about-img-shape position-relative"> <img class="img-fluid"
-                                src="./assets/images/s_dad.jpg"
+                                src="./assets/images/s_daddy.jpg"
                                 alt="Photo by Dane Deaner">
                         </div>
                     </div>
